<resources>
    <string name="app_name">OLX</string>
    <string name="title_home">Home</string>
    <string name="title_sell">Sell</string>
    <string name="title_my_ads">My Ads</string>
    <string name="str_india">India</string>
    <string name="str_india_leading_marketplace">India\'s leading \nmarketplace</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="str_accepting">If you are continue, you are accepting</string>
    <string name="str_terms">OLX Terms and Conditions and Privacy Policy</string>
    <string name="title_profile">Profile</string>
    <string name="browse_category">Browse Categories</string>
    <string name="find_cars_and_more">Find Cars,Mobile Phones and more...</string>
    <string name="str_browse_categories">Browse Categories</string>
    <string name="you_havent_listing">You haven\'t listed anything yet</string>
    <string name="let_go">Let go of what you don\'t use anymore</string>
    <string name="str_post">Post</string>
    <string name="what_are_offering">What are you offering?</string>
    <string name="include_some_details">Include some details</string>
    <string name="brand">Brand *</string>
    <string name="year">Year *</string>
    <string name="km_driven">KM driven</string>
    <string name="ad_title">Ad Title *</string>
    <string name="mention_the_key">Mention the key features of your item(e.g. brand, model, age, type)</string>
    <string name="describe_what_selling">Describe what you are selling *</string>
    <string name="include_conditions">Include condition, features and reason for selling *</string>
    <string name="required_fields">* Required Fields</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="str_details">Details</string>
    <string name="call">Call</string>
    <string name="title_detail">Details</string>
    <string name="title_include_details">Include Details</string>

    <string name="facebook_app_id">815078335653886</string>
    <string name="fb_login_protocol_scheme">fb815078335653886</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="str_back">Back</string>
    <string name="str_done">Done</string>
    <string name="upload_photos">UPLOAD UP TO 5 PHOTOS.</string>
    <string name="title_upload_photo">Upload Photo</string>
    <string name="str_address">Address *</string>
    <string name="str_postal_address">Postal Address</string>
    <string name="str_phone">Phone Number *</string>
    <string name="str_price">Price *</string>
    <string name="enter_brand">Enter Brand Name</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_ad_title">Enter Ad Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_price">Enter Price</string>
    <string name="full_name">Full Name *</string>
    <string name="email">Email Address *</string>
    <string name="str_save">Save</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="title_settings">Settings</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="no_data">No Data Found</string>
    <string name="there_is_no">There is no ads currenlty.</string>

</resources>
