<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.olx.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_browse_category"
            app:destination="@id/navigation_browse_category"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.app.olx.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell">

        <action
            android:id="@+id/action_sell_to_include_details"
            app:destination="@id/navigation_include_details"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_sell"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_include_details"
        android:name="com.app.olx.ui.includeDetails.IncludeDetailsFragment"
        android:label="@string/title_include_details"
        tools:layout="@layout/fragment_include_details">

        <action
            android:id="@+id/action_include_details_to_uploadPhoto"
            app:destination="@id/navigation_upload_photo"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_include_details"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_my_ads"
        android:name="com.app.olx.ui.myAds.MyAdsFragment"
        android:label="@string/title_my_ads"
        tools:layout="@layout/fragment_my_ads">

        <action
            android:id="@+id/action_ads_to_sell"
            app:destination="@id/navigation_sell"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_my_ads"
            app:popUpToInclusive="false" />

        <action
            android:id="@+id/action_my_ads_to_detail"
            app:destination="@id/navigation_detail"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_my_ads"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.olx.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.app.olx.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.app.olx.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_browse_category"
        android:name="com.app.olx.ui.browseCategory.BrowseCategoryFragment"
        android:label="@string/browse_category"
        tools:layout="@layout/fragment_browse_categories">

        <action
            android:id="@+id/action_browse_category_to_detail"
            app:destination="@id/navigation_detail"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_browse_category"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_upload_photo"
        android:name="com.app.olx.ui.uploadPhoto.UploadPhotoFragment"
        android:label="@string/title_upload_photo"
        tools:layout="@layout/fragment_upload_photo">

        <action
            android:id="@+id/action_upload_photo_to_my_ads"
            app:destination="@id/navigation_my_ads"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_upload_photo"
            app:popUpToInclusive="false" />

    </fragment>

</navigation>