<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".65"
        android:background="@color/colorLightGrey"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_180"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dp_84"
            android:textStyle="bold">


        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_india"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold">


        </androidx.appcompat.widget.AppCompatTextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_4"
                android:src="@drawable/google_icon" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/continue_with_google"
                android:textColor="@color/colorPrimaryDark"></androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_4"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/colorPrimaryDark"></androidx.appcompat.widget.AppCompatButton>



        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:layout_marginBottom="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_16">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_accepting"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white">


            </androidx.appcompat.widget.AppCompatTextView>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_terms"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>