<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/ll_no_data"
        >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:src="@drawable/no_data"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@android:color/black"
            android:padding="@dimen/dp_8"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/you_havent_listing">

        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/let_go">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/dp_240"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:id="@+id/buttonPost"
            android:layout_gravity="center"
            android:text="@string/str_post"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_ads"></androidx.recyclerview.widget.RecyclerView>


</LinearLayout>